Не использовать методы, deprecated в Java 9